log
Sat 13 Aug 2022 06:18:01 PM UTC: 
 tests:  1|6
total_score: 10/70
63623d1
Sat 13 Aug 2022 06:43:54 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:14: error: unused variable ‘vuelta’ [-Werror=unused-variable]
   40 |   int i = 0, vuelta;
      |              ^~~~~~
exercises.c:40:7: error: unused variable ‘i’ [-Werror=unused-variable]
   40 |   int i = 0, vuelta;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
9e53529
Sat 13 Aug 2022 06:49:48 PM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:14: error: variable ‘vuelta’ set but not used [-Werror=unused-but-set-variable]
   40 |   int i = 0, vuelta;
      |              ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
ebda0fa
Sat 13 Aug 2022 06:52:54 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
9a2811c
Sat 13 Aug 2022 07:16:10 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:67:10: error: ‘p’ undeclared (first use in this function)
   67 |   strcpy(p ->rut, rut);
      |          ^
exercises.c:67:10: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
f9e1947
Sat 13 Aug 2022 07:16:22 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
563b5ad
Sat 13 Aug 2022 07:17:16 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 20/70
0e88c1f
